--- a/files/default_site.html
+++ b/files/default_site.html
@@ -1,7 +1,27 @@
-<html>
-	<titel>Web-site test</title>
-
-	<body>
-		<p>Ansible is awsome!</p>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Main Menu</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="menu">
+            <button>Search Form</button>
+            <button>System</button>
+            <button>Overview</button>
+            <button>Logs</button>
+            <button>Storage</button>
+            <button>Networking</button>
+            <button>Accounts</button>
+            <button>Applications</button>
+            <button>Software Updates</button>
+        </div>
+        <div class="content">
+            <!-- Main content goes here -->
+        </div>
+    </div>
+</body>
 </html>
